--- a/.bowerrc
+++ b/.bowerrc
@@ -1,3 +1,6 @@
 {
-  "directory" : "_includes/bower_components"
+  "directory" : "_includes/bower_components",
+  "scripts": {
+  	"postinstall": "./_bower-postinstall.sh"
+  }
 }
